--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ img {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+            0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header-conteiner {
     display: flex;
@@ -97,17 +99,33 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav-link.current {
+position: relative;
+}
+
+.header-nav-link.current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #484bbf;
 }
 
 .header-nav-link:hover,
-.header-nav-link:focus {
+.header-nav-link:focus,
+.header-nav-link.current {
     color: #404bbf;
 }
 
 .adress {
     display: block;
     font-style: normal;
-
 }
 .address-list {
     display: flex;
@@ -120,6 +138,7 @@ img {
     letter-spacing: 0.02em;
     color: #434455;
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list .address-item-link:hover,
@@ -131,7 +150,6 @@ img {
     background-color: #2e2f42;
     padding: 188px 0;
 }
-
 
 
 .hero-title {
