--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,20 @@ position: relative;
 
 .hero {
     background-color: #2e2f42;
+    height: 600px;
+    max-width: 1440px;
+    display: flex;
+    align-items: center;
     padding: 188px 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office.jpg);
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
 }
 
 
@@ -187,7 +200,9 @@ position: relative;
     padding-right: 32px;
     padding-bottom: 16px;
     padding-left: 32px;
-
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -245,7 +260,25 @@ position: relative;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    font-weight: 400;
+    background-color: #ffffff;
+    /*padding-bottom: 0;
+    padding-right: 0;
+    margin-right: auto;
+    margin-left: auto;*/
 }
+
+.icon-section-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background: #f4f4fd;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
 
 .team {
     background-color: #f4f4fd;
@@ -263,7 +296,9 @@ position: relative;
 
 .team-list {
     display: flex;
+    justify-content: center;
     gap: 24px;
+    margin-top: 8px;
 }
 
 .team-subtitle {
@@ -292,6 +327,39 @@ position: relative;
     color: #434455;
 
 }
+
+.soc-icon-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8px;
+}
+
+.soc-icon {
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.media-icon {
+    fill: #f4f4fd;
+}
+
+.soc-icon {
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.soc-icon:hover,
+.soc-icon:focus {
+    background-color: #404bbf;
+}
+
 
 .portfolio {
     padding: 120px 0;
@@ -375,11 +443,102 @@ position: relative;
 }
 
 .footer-text {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
+
     line-height: 1.5;
     font-size: 16px;
     color: #f4f4fd;
     letter-spacing: 0.02em;
     max-width: 264px;
+}
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+
+.footer-link-text {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-links-items {
+  width: 40px;
+  height: 40px;
+}
+.foot-links {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border: radius 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 50%;
+}
+.foot-links:hover,
+.foot-links:focus {
+  background-color: #31d0aa;
+}
+.link-ikon-foot {
+  fill: #f4f4fd;
+}
+
+.footer-list-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 16px;
+    padding-bottom: 3px;
+    padding-top: 0;
+}
+
+.footer-social-contact {
+    width: 208px;
+    height: 80px;
+}
+
+.footer-icon-list {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover {
+    background-color: #31D0AA;
+}
+
+.footer-social-link:focus {
+    background-color: #31D0AA;
+}
+
+.footer-media-icon {
+    fill: #F4F4FD;
 }
