--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ position: relative;
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background-color: #484bbf;
+    background-color: #404bbf;
 }
 
 .header-nav-link:hover,
@@ -156,7 +156,6 @@ position: relative;
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
             url(../images/people-office.jpg);
             background-repeat: no-repeat;
@@ -283,22 +282,28 @@ position: relative;
 .team {
     background-color: #f4f4fd;
     padding: 120px 0;
-    margin: 0 auto;
+   /* margin: 0 auto;*/
 }
 
 .teams {
     padding: 32px 0;
 }
 .team-title {
-    text-align: center;
     margin-bottom: 72px;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    color: #2E2F42;
 }
 
 .team-list {
     display: flex;
+    align-items: flex-end;
+    flex-wrap: nowrap;
     justify-content: center;
     gap: 24px;
-    margin-top: 8px;
 }
 
 .team-subtitle {
@@ -312,13 +317,16 @@ position: relative;
 }
 
 .team-item {
-    background-color: #ffffff;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
-    
+    background-color: #ffffff;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    }
+
+.teams {
+    padding: 32px 0;
+    background: #fff;
 }
-
-
 .team-text {
     font-size: 16px;
     line-height: 1.5;
@@ -332,7 +340,13 @@ position: relative;
     display: flex;
     justify-content: center;
     gap: 24px;
+    flex-shrink: 0;
+    align-self: flex-end;
+    list-style: none;
     margin-top: 8px;
+    padding: 0 16px;
+    flex-direction: row;
+    align-items: center;
 }
 
 .soc-icon {
