--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,11 @@ position: relative;
     padding: 100px 0;
 }
 
-
+.footer-container {
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px;
+}
 
 .footer-logo {
     font-family: "Raleway", sans-serif;
@@ -465,10 +469,6 @@ position: relative;
     max-width: 264px;
 }
 
-.footer-container {
-    display: flex;
-    align-items: baseline;
-}
 
 
 .footer-link-text {
@@ -513,10 +513,10 @@ position: relative;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
-    margin-top: 0;
+    /*margin-top: 0;*/
     margin-bottom: 16px;
-    padding-bottom: 3px;
-    padding-top: 0;
+    /*padding-bottom: 3px;
+    padding-top: 0;*/
 }
 
 .footer-social-contact {
@@ -542,17 +542,17 @@ position: relative;
     height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    /*transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+*/}
 
-.footer-social-link:hover {
-    background-color: #31D0AA;
-}
-
+.footer-social-link:hover,
 .footer-social-link:focus {
     background-color: #31D0AA;
 }
 
+
 .footer-media-icon {
+    width: 24;
+    height: 24;
     fill: #F4F4FD;
 }
