--- a/css/style.css
+++ b/css/style.css
@@ -384,8 +384,9 @@ position: relative;
     padding: 0 15px;
     margin: 0 auto;
     border: 1px solid #e7e9fc;
-   flex-wrap: wrap;
-   gap: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
 }
 
 .portfolio-title {
@@ -408,6 +409,13 @@ position: relative;
 
 .portfolio-item {
     width: calc((100% - 48px) / 3);
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-item:hover p {
+    transform: translateY(0%);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-content {
@@ -430,6 +438,21 @@ position: relative;
     color: #434455;
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+
+.portfolio-item p {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer {
