--- a/css/style.css
+++ b/css/style.css
@@ -409,33 +409,54 @@ position: relative;
 
 .portfolio-item {
     width: calc((100% - 48px) / 3);
+    /* Обчислює ширину елемента */
     position: relative;
+    /* Додає позиціонування для абсолютних дочірніх елементів */
     overflow: hidden;
+    /* Приховує вміст, що виходить за межі елемента */
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* Анімація зміни тіні */
 }
 
 .portfolio-item:hover {
-    
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+    /* Тінь при ховері */
 }
 
 .portfolio-item p {
     position: absolute;
+    /* Абсолютне позиціонування параграфа всередині контейнера */
     top: 0;
+    /* Вирівнює параграф по верхньому краю контейнера */
+    left: 0;
+    /* Вирівнює параграф по лівому краю контейнера */
     font-size: 16px;
+    /* Розмір шрифту */
     line-height: 1.5;
+    /* Міжрядковий інтервал */
     letter-spacing: 0.02em;
+    /* Відстань між літерами */
     color: #f4f4fd;
+    /* Колір тексту */
     padding: 40px 32px;
+    /* Відступи всередині параграфа */
     background-color: #4d5ae5;
+    /* Колір фону параграфа */
     height: 100%;
+    /* Висота параграфа рівна висоті батьківського елемента */
     width: 100%;
+    /* Ширина параграфа рівна ширині батьківського елемента */
     transform: translateY(100%);
+    /* Зміщує параграф вниз */
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* Анімація зміни трансформації */
 }
 
 .portfolio-item:hover p {
     transform: translateY(0%);
+    /* Переміщує параграф в межі контейнера при ховері */
 }
 
 .footer {
