--- a/css/style.css
+++ b/css/style.css
@@ -375,20 +375,18 @@ position: relative;
 }
 
 
+/* Основні стилі для секції портфоліо */
 .portfolio {
     padding: 120px 0;
 }
 
-.portfolio-container {
+.container {
     max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
-    border: 1px solid #e7e9fc;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px;
 }
 
+/* Стилі для заголовка портфоліо */
 .portfolio-title {
     text-align: center;
     font-family: "Roboto", sans-serif;
@@ -400,63 +398,57 @@ position: relative;
     margin-bottom: 72px;
 }
 
+/* Стилі для списку портфоліо */
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
+    gap: 24px;
+    /* Відстань між картками */
 }
 
+/* Стилі для кожного елемента портфоліо */
 .portfolio-item {
     width: calc((100% - 48px) / 3);
-    /* Обчислює ширину елемента */
+    /* Враховує відстань між картками */
     position: relative;
-    /* Додає позиціонування для абсолютних дочірніх елементів */
     overflow: hidden;
-    /* Приховує вміст, що виходить за межі елемента */
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /* Анімація зміни тіні */
 }
 
+/* Тіні при ховері */
 .portfolio-item:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
-    /* Тінь при ховері */
 }
 
-.portfolio-item p {
-    position: absolute;
-    /* Абсолютне позиціонування параграфа всередині контейнера */
-    top: 0;
-    /* Вирівнює параграф по верхньому краю контейнера */
-    left: 0;
-    /* Вирівнює параграф по лівому краю контейнера */
-    font-size: 16px;
-    /* Розмір шрифту */
-    line-height: 1.5;
-    /* Міжрядковий інтервал */
-    letter-spacing: 0.02em;
-    /* Відстань між літерами */
-    color: #f4f4fd;
-    /* Колір тексту */
-    padding: 40px 32px;
-    /* Відступи всередині параграфа */
-    background-color: #4d5ae5;
-    /* Колір фону параграфа */
-    height: 100%;
-    /* Висота параграфа рівна висоті батьківського елемента */
+/* Стилі для зображення всередині елемента портфоліо */
+.portfolio-image-container img {
+    display: block;
     width: 100%;
-    /* Ширина параграфа рівна ширині батьківського елемента */
-    transform: translateY(100%);
-    /* Зміщує параграф вниз */
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /* Анімація зміни трансформації */
+    height: auto;
 }
 
-.portfolio-item:hover p {
+/* Стилі для вмісту портфоліо */
+.portfolio-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Анімація при ховері */
+.portfolio-item:hover .portfolio-content {
     transform: translateY(0%);
-    /* Переміщує параграф в межі контейнера при ховері */
 }
 
 .footer {
