--- a/css/style.css
+++ b/css/style.css
@@ -480,50 +480,44 @@ position: relative;
 }
 
 .footer-text {
-
     line-height: 1.5;
     font-size: 16px;
     color: #f4f4fd;
     letter-spacing: 0.02em;
     max-width: 264px;
+    margin-bottom: 16px;
 }
 
-
-
-.footer-link-text {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  margin-bottom: 16px;
-}
 .footer-list {
-  display: flex;
-  gap: 16px;
+    display: flex;
+    gap: 16px;
 }
-.footer-links-items {
-  width: 40px;
-  height: 40px;
+
+.footer-links-item {
+    width: 40px;
+    height: 40px;
 }
-.foot-links {
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border: radius 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border-radius: 50%;
+
+.footer-social-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.foot-links:hover,
-.foot-links:focus {
-  background-color: #31d0aa;
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #31d0aa;
 }
-.link-ikon-foot {
-  fill: #f4f4fd;
+
+.footer-media-icon {
+    width: 24px;
+    height: 24px;
+    fill: #f4f4fd;
 }
 
 .footer-list-title {
@@ -532,46 +526,5 @@ position: relative;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
-    /*margin-top: 0;*/
     margin-bottom: 16px;
-    /*padding-bottom: 3px;
-    padding-top: 0;*/
-}
-
-.footer-social-contact {
-    width: 208px;
-    height: 80px;
-}
-
-.footer-icon-list {
-    display: flex;
-    gap: 16px;
-}
-
-.footer-social-item {
-    width: 40px;
-    height: 40px;
-}
-
-.footer-social-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    /*transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-*/}
-
-.footer-social-link:hover,
-.footer-social-link:focus {
-    background-color: #31D0AA;
-}
-
-
-.footer-media-icon {
-    width: 24;
-    height: 24;
-    fill: #F4F4FD;
 }
