--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,10 @@ position: relative;
     color: #434455;
     font-weight: 400;
     background-color: #ffffff;
+    /*padding-bottom: 0;
+    padding-right: 0;
+    margin-right: auto;
+    margin-left: auto;*/
 }
 
 .icon-section-container {
