--- a/css/style.css
+++ b/css/style.css
@@ -37,20 +37,22 @@ img {
     margin: 0 auto;
     padding: 0 15px;
     width: 100%;
-    
+
 }
 
 .header {
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
-            0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+        0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
+
 .header-conteiner {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
 }
+
 .header-list {
     display: flex;
 }
@@ -103,7 +105,7 @@ img {
 }
 
 .header-nav-link.current {
-position: relative;
+    position: relative;
 }
 
 .header-nav-link.current::after {
@@ -127,6 +129,7 @@ position: relative;
     display: block;
     font-style: normal;
 }
+
 .address-list {
     display: flex;
     gap: 40px;
@@ -156,11 +159,11 @@ position: relative;
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)),
-            url(../images/people-office.jpg);
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: cover;
+            rgba(46, 47, 66, 0.7)),
+        url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 
 
@@ -254,6 +257,7 @@ position: relative;
 .section-item {
     width: calc((100% - 72px) / 4);
 }
+
 .section-text {
     font-size: 16px;
     line-height: 1.5;
@@ -282,12 +286,13 @@ position: relative;
 .team {
     background-color: #f4f4fd;
     padding: 120px 0;
-   /* margin: 0 auto;*/
+    /* margin: 0 auto;*/
 }
 
 .teams {
     padding: 32px 0;
 }
+
 .team-title {
     margin-bottom: 72px;
     font-size: 36px;
@@ -321,12 +326,13 @@ position: relative;
     border-radius: 0px 0px 4px 4px;
     background-color: #ffffff;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    }
+}
 
 .teams {
     padding: 32px 0;
     background: #fff;
 }
+
 .team-text {
     font-size: 16px;
     line-height: 1.5;
@@ -410,7 +416,7 @@ position: relative;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Тіні при ховері */
+/* РўС–РЅС– РїСЂРё С…РѕРІРµСЂС– */
 .portfolio-item:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -480,6 +486,7 @@ position: relative;
 .footer-logo-text {
     margin-right: 120px;
 }
+
 .footer-logo {
     font-family: "Raleway", sans-serif;
     font-size: 18px;
@@ -504,10 +511,12 @@ position: relative;
     max-width: 264px;
     /*margin-bottom: 16px;*/
 }
+
 .footer-social-contact {
     margin-right: 208px;
     height: 80px;
 }
+
 .footer-list-title {
     font-weight: 500;
     font-size: 16px;
@@ -550,4 +559,3 @@ position: relative;
 .footer-media-icon {
     fill: #f4f4fd;
 }
-
