--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ img {
     color: #404bbf;
 }
 
-.adress {
+.address {
     display: block;
     font-style: normal;
 }
@@ -151,10 +151,10 @@ img {
 
 .hero {
     background-color: #2e2f42;
-    height: 600px;
+    /*height: 600px;*/
     max-width: 1440px;
-    display: flex;
-    align-items: center;
+    /*display: flex;
+    align-items: center;*/
     padding: 188px 0;
     margin-left: auto;
     margin-right: auto;
@@ -172,7 +172,7 @@ img {
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #ffffff;
-    background-color: #2e2f42;
+    /*background-color: #2e2f42;*/
     max-width: 496px;
     margin: 0 auto 48px auto;
     font-weight: 700;
@@ -346,12 +346,12 @@ img {
     display: flex;
     justify-content: center;
     gap: 24px;
-    flex-shrink: 0;
-    align-self: flex-end;
+    /*flex-shrink: 0;
+    align-self: flex-end;*/
     list-style: none;
     margin-top: 8px;
-    padding: 0 16px;
-    flex-direction: row;
+    /*padding: 0 16px;
+    flex-direction: row;*/
     align-items: center;
 }
 
@@ -455,7 +455,7 @@ img {
 }
 
 .portfolio-content {
-    padding: 16px;
+    padding: 32px 16px;
     background-color: #ffffff;
 }
 
@@ -473,7 +473,7 @@ img {
 
 .footer {
     background-color: #2e2f42;
-    font-family: "Raleway", sans-serif;
+    /*font-family: "Raleway", sans-serif;*/
     padding: 100px 0;
 }
 
@@ -512,10 +512,10 @@ img {
     /*margin-bottom: 16px;*/
 }
 
-.footer-social-contact {
+/*.footer-social-contact {
     margin-right: 208px;
     height: 80px;
-}
+}*/
 
 .footer-list-title {
     font-weight: 500;
